add dom-to-image and image-clip

--- a/src/resource/canvas.less
+++ b/src/resource/canvas.less
@@ -17,8 +17,9 @@
         font-size: 18px;
     }
 
-    > .selected.grid-item
+    .test-selected
     {
+        background-color: red;
         border: 2px solid red;
     }
 }
