Completed clip image from imageLike.

--- a/src/resource/canvas.less
+++ b/src/resource/canvas.less
@@ -1,8 +1,8 @@
-.grid-container.row
+.m-grid, .m-itemlist
 {
     position: relative;
 
-    > .web-recognize-Content
+    .web-recognize-Content
     {
         position: absolute;
         top: 0;
